...
    const val HorizontalAlbumSection = 17
    const val HorizontalAlbumArtistSection = 18
    const val HorizontalSongSection = 19
    const val Genre = 20
    const val SmartPlaylist = 21
    const val MediaProvider = 22
    const val Changelog = 23
    const val License = 24
    const val Notes = 25
    const val Grouping = 26
    const val SleepTimer = 27
    const val ScanProgress = 28
    const val Sku = 29
...
